--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"highcharts-react-official": "^3.1.0",
 		"html2canvas": "^1.4.0",
 		"moment": "^2.29.1",
-		"next": "12.0.2",
+		"next": "^12.0.2",
 		"next-compose-plugins": "^2.2.1",
 		"next-plugin-antd-less": "^1.5.2",
 		"postcss-flexbugs-fixes": "^5.0.2",
