--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
 		"highcharts-react-official": "^3.1.0",
 		"html2canvas": "^1.4.0",
 		"moment": "^2.29.1",
-		"next": "^12.0.2",
+		"next": "^14.0.4",
 		"next-compose-plugins": "^2.2.1",
 		"next-plugin-antd-less": "^1.5.2",
 		"postcss-flexbugs-fixes": "^5.0.2",
-		"postcss-preset-env": "^6.7.0",
+		"postcss-preset-env": "^9.3.0",
 		"prop-types": "^15.7.2",
-		"quill": "^1.3.7",
+		"quill": "0.0.2",
 		"react": "17.0.2",
 		"react-apexcharts": "^1.3.9",
 		"react-dom": "17.0.2",
 		"react-file-base64": "^1.0.3",
-		"react-quill": "^2.0.0-beta.4",
+		"react-quill": "^2.0.0",
 		"react-redux": "^7.2.6",
 		"react-tagcloud": "^2.1.1",
 		"redux": "^4.1.2",
@@ -47,8 +47,10 @@
 	"devDependencies": {
 		"@next/bundle-analyzer": "^12.0.2",
 		"antd-dayjs-webpack-plugin": "^1.0.6",
+		"eslint": "7.32.0",
+		"eslint-config-next": "12.0.2",
 		"less-loader": "^10.2.0",
 		"sass": "^1.43.4",
-		"serve": "^13.0.2"
+		"serve": "^14.2.1"
 	}
 }
